# Gastei

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_renda_presentes.py  0003_add_renda_pensao.py
scripts/: seed_demo_data.py  seed_dev_account.py
seeds/: categories.yaml  rules.yaml
src/gastei/: config.py  db.py
src/gastei/agents/: __init__.py  insight_agent.py  tools.py
src/gastei/api/: deps.py  main.py
src/gastei/clients/: gemini_client.py  llm_client.py  pluggy_client.py  pluggy_connector.py
src/gastei/domain/: ports.py
src/gastei/jobs/: sync_job.py
src/gastei/models/: __init__.py  account.py  category.py  chat.py  example.py  insight_cache.py  item.py  rule.py  transaction.py
src/gastei/repositories/: account_repo.py  example_repo.py  transaction_repo.py
src/gastei/schemas/: __init__.py  account.py  categorization.py  chat.py  (+8 more)
streamlit_app/: app.py
streamlit_app/components/: api_client.py  ui.py
streamlit_app/views/: chat.py  conexoes.py  dashboard.py  home.py  transacoes.py
tests/: conftest.py
tests/contract/: test_anthropic_client.py  test_gemini_client.py  test_pluggy_client.py
tests/fakes/: __init__.py  bank.py  classifier.py  examples.py  llm.py  repository.py
tests/integration/: test_categories_endpoint.py  test_chat_endpoint.py  test_chat_service.py  test_example_repo.py  test_imports_endpoint.py  test_migrations.py  test_query_endpoints.py  test_rules_seed.py  test_streamlit_smoke.py  test_sync_job_classifier.py  test_sync_service.py  test_transaction_repo.py
tests/unit/: test_agent_tools.py  test_aggregations.py  test_categorization_pipeline.py  test_fakes_satisfy_ports.py  test_gemini_translation.py  test_insight_agent.py  test_llm_classifier.py  test_log_redaction.py  test_ofx_import_service.py  test_ofx_inspector.py  test_rule_engine.py  test_seed_loader.py  test_sync_job.py
(+21 files in other folders)
